# bouffalo_sdk

./: CHANGELOG.md  CLAUDE.md  VERSION  project.build
.github/workflows/: sync-drivers.yml
bsp/board/bl602dk/: bl602_flash.ld  board.c  board.h
bsp/board/bl616cldk/: bl616cl_common.ld.in  bl616cl_dv.ld  board.c  board_gpio.c  board_gpio.h
bsp/board/bl616dk/: bl616_common.ld.in  bl616_flash_zigbee.ld.in  board.c
bsp/board/bl618dgdk/: bl618dg_common.ld.in  bl618dg_dv.ld  bl618dg_ram_ap_b0.ld  bl618dg_wfa_np_flash.ld  board.c  board_gpio.c  board_gpio.h
bsp/board/bl702dk/: bl702_flash.ld  board.c
bsp/board/bl702ldk/: bl702l_flash.ld  board.c
bsp/common/: CMakeLists.txt
bsp/common/image_sensor/: README.md  bf3901.h  image_sensor.c
bsp/common/lcd/: lcd.h  lcd_conf.h
bsp/common/lcd/mipi_dpi/: bl_mipi_dpi_v2.c  bl_mipi_dpi_v2.h  standard_dpi.h
bsp/common/lcd/mipi_dsi/: axs15231b_hs035_dsi.c  ili9806e_kd050fwfia019_dsi.c  ili9806e_kd050fwfia019_dsi.h  ili9881c_kd050020_dsi.c  mipi_dsi_v2.c  mipi_dsi_v2.h
bsp/common/msg_router/device/: CMakeLists.txt
components/fota/ota/: ota.c
components/net/lwip/lwip/: CMakeLists.txt
components/net/netbus/atmodule/: CMakeLists.txt
components/os/power_mgmt/: clock_manager.c  tickless_accurate.c
components/utils/async_event/: async_event.c
components/wireless/bl_wpa_supplicant/: CMakeLists.txt  Kconfig
components/wireless/bluetooth/: BLUETOOTH-LIBS.md  ble_common_readonly.cmake  version_btble_component.c
components/wireless/bluetooth/blestack/: ChangeLog
components/wireless/macsw/inc/: coexm.h  macsw_tcp_bench_config.h
components/wireless/matter/mfd/: ChangeLog.md  bflb_mfd.c
components/wireless/wifi6/wifi6_lwip_adapter/: cli_al.c  net_al.c  net_al_ext.c
components/wireless/wl80211/: CMakeLists.txt  lwip.c  supplicant.c  wifi_mgmr.c  wl80211_platform.c
components/wireless/wl80211/include/: supplicant.h  (+2 more)
docs/zh/: index.rst
examples/audio/player/: flash_prog_cfg.ini
examples/bl618dg_dualcore/: flash_prog_cfg.ini
examples/btble/btble_cli/: defconfig  main.c
examples/btble/central/: main.c
examples/btble/peripheral/: Makefile  main.c
examples/coex/wifi_bz_coexm/: CMakeLists.txt  README.md  defconfig  flash_prog_cfg.ini  main.c
examples/lvgl/lvgl_v8/: lcd_conf_user.h
examples/lvgl/lvgl_v8_with_osd/: defconfig  dpi_manager.c  lcd_conf_user.h  main.c
examples/lvgl/lvgl_v9/: lcd_conf_user.h
examples/lvgl/lvgl_v9_with_osd/: CMakeLists.txt  defconfig  dpi_manager.c  dpi_manager.h  filesystem_reader.c  lcd_conf_user.h  lvgl9_conf_user.h  main.c  video_config.h
examples/lvgl/lvgl_v9_with_osd/demos/UICODE172/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_anim.c  ui_anim.h
examples/lvgl/lvgl_v9_with_osd/demos/UICODE172/screens/: ui_Screen1.c  ui_Screen1.h
examples/lvgl/lvgl_v9_with_osd/demos/UICODE800/: CMakeLists.txt  filelist.txt  project.info  ui.h  ui_anim.c  ui_anim.h
examples/lvgl/lvgl_v9_with_osd/demos/UICODE800/screens/: ui_Screen1.c  ui_Screen1.h
examples/lvgl/lvgl_v9_with_osd/demos/UICODE854/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_anim.c  ui_anim.h
examples/lvgl/lvgl_v9_with_osd/demos/UICODE854/screens/: ui_Screen1.c  ui_Screen1.h
examples/openamp/: flash_prog_cfg.ini
examples/pmu/wl_ble_lp/: README.md  lwipopts_user.h
examples/solution/solution_dualcore/: flash_prog_cfg.ini
examples/wifi/coex/wifi_ble/: CMakeLists.txt  btble_cli_port.c  btble_test_port.c  btble_test_port.h  defconfig  main.c
examples/wifi/coex/wifi_ble/BL616cl_test/: README.md  test_tool.py
examples/wifi/coex/wifi_ble/BL616cl_test/BLE/: README.md  ble_test.py
examples/wifi/coex/wifi_ble/BL616cl_test/WiFi/: README.md  wifi_test.py
examples/wifi/coex/wifi_ble/BL616cl_test/coex/: README.md  coex_test.py
examples/wifi/macsw_bare/: main.c  p2p_cli.c
tools/openocd/interface/: nuclei_ftdi.cfg
(+172 files in other folders)
